cera: interface injection also more stuff in optifine cosmetics